Closed Bug 1811822 Opened 3 years ago Closed 3 years ago

nsFrameLoader::LoadContext() may return null, yet the webidl binding doesn't expect that.

Categories

(Core :: DOM: Core & HTML, defect, P3)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: smaug, Assigned: smaug)

Details

Attachments

(1 file)

No description provided.
Pushed by opettay@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/295667c27550 nsFrameLoader::LoadContext() may return null, yet the webidl binding doesn't expect that., r=peterv
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: