Bug 1811822 - nsFrameLoader::LoadContext() may return null, yet the webidl binding doesn't expect that., r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D167534